
[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "my package"
authors = ["langtonhugh <s.h.langton@amsterdamumc.nl>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
